cmake_minimum_required(VERSION 2.0)

#set(Boost_DEBUG ON)
#FIND_PACKAGE(Boost)

#IF(Boost_FOUND)
#MESSAGE("Boost library found... " ${Boost_FOUND})
#add_subdirectory(kinematics)
#ELSE (Boost_FOUND)
#  MESSAGE("No Boost found, not compiling the kinematics toolbox")  
#ENDIF(Boost_FOUND)

